test_yuriiq/catalog/language/english/account/return.php
<?php

// text
$_['text_error']	= 'The returns you requested could not be found!';
$_['text_comment']	= 'Return Comments';
$_['text_account']	= 'Account';
$_['text_return_id']	= 'Return ID:';
$_['text_empty']	= 'You have not made any previous returns!';
$_['text_description']	= '<p>Please complete the form below to request an RMA number.</p>';
$_['text_date_added']	= 'Date Added:';
$_['text_agree']	= 'I have read and agree to the <a class="colorbox" href="%s" alt="%s"><b>%s</b></a>';
$_['text_return']	= 'Return Information';
$_['text_history']	= 'Return History';
$_['text_message']	= '<p>Thank you for submitting your return request. Your request has been sent to the relevant department for processing.</p><p> You will be notified via e-mail as to the status of your request.</p>';
$_['text_additional']	= 'Additional Information';
$_['text_date_ordered']	= 'Order Date:';
$_['text_status']	= 'Status:';
$_['text_order']	= 'Order Information';
$_['text_order_id']	= 'Order ID:';
$_['text_customer']	= 'Customer:';
$_['text_product']	= 'Product Information &amp; Reason for Return';
$_['text_return_detail']	= 'Return Details';

// error
$_['error_captcha']	= 'Verification code does not match the image!';
$_['error_product']	= 'Product Name must be greater than 3 and less than 255 characters!';
$_['error_firstname']	= 'First Name must be between 1 and 32 characters!';
$_['error_email']	= 'E-Mail Address does not appear to be valid!';
$_['error_model']	= 'Product Model must be greater than 3 and less than 64 characters!';
$_['error_order_id']	= 'Order ID required!';
$_['error_reason']	= 'You must select at a return product reason!';
$_['error_telephone']	= 'Telephone must be between 3 and 32 characters!';
$_['error_lastname']	= 'Last Name must be between 1 and 32 characters!';
$_['error_agree']	= 'Warning: You must agree to the %s!';

// entry
$_['entry_firstname']	= 'First Name:';
$_['entry_reason']	= 'Reason for Return:';
$_['entry_email']	= 'E-Mail:';
$_['entry_product']	= 'Product Name:';
$_['entry_telephone']	= 'Telephone:';
$_['entry_opened']	= 'Product is opened:';
$_['entry_quantity']	= 'Quantity:';
$_['entry_model']	= 'Product Code:';
$_['entry_captcha']	= 'Enter the code in the box below:';
$_['entry_date_ordered']	= 'Order Date:';
$_['entry_lastname']	= 'Last Name:';
$_['entry_fault_detail']	= 'Faulty or other details:';
$_['entry_order_id']	= 'Order ID:';

// column
$_['column_model']	= 'Model';
$_['column_opened']	= 'Opened';
$_['column_date_added']	= 'Date Added';
$_['column_product']	= 'Product Name';
$_['column_reason']	= 'Reason';
$_['column_status']	= 'Status';
$_['column_quantity']	= 'Quantity';
$_['column_price']	= 'Price';
$_['column_action']	= 'Action';
$_['column_comment']	= 'Comment';

// heading
$_['heading_title']	= 'Product Returns';
?>